--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <div class="carousel-slide">
                     <div class="car-card">
                         <div class="car-image">
-                            <img src="images/car3.png" alt="Monster Truck">
+                            <img src="images/car3.jpg" alt="Monster Truck">
                         </div>
                         <div class="car-description">
                             <p>Massive monster trucks with oversized wheels, elevated suspensions, and aggressive
